--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -12,7 +12,8 @@
     <p> <a href="https://sasalau34.github.io/0605/ex.html">ex.html</a></p>
     <p> <a href="https://sasalau34.github.io/0605/ex2.html">ex2.html</a></p>
     <p> <a href="https://sasalau34.github.io/0605/hw.html">hw.html</a></p>
- 
+    <p> <a href="https://sasalau34.github.io/0605/shift.html">shift.html</a></p>
+    <p> <a href="https://sasalau34.github.io/0605/unshift.html">unshift.html</a></p>
 
 
 
