--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p> <a href="https://sasalau34.github.io/0605/hw.html">hw.html</a></p>
     <p> <a href="https://sasalau34.github.io/0605/shift.html">shift.html</a></p>
     <p> <a href="https://sasalau34.github.io/0605/unshift.html">unshift.html</a></p>
+    <p> <a href="https://sasalau34.github.io/0605/hw2.html">hw2.html</a></p>
 
 
 
